# virtualzarr-gen

./: .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  README.md  generate_cloud_optimized_store_https.ipynb  generate_vds_clean.py  generate_vds_s3.py  generate_vds_s3_refresh.py  pyproject.toml  requirements.txt  vds_basic_L2_dummytime_prod.ipynb  virtual_ds_example.json  wrapper.sh
.github/workflows/: docker-publish.yml  terraform-deploy.yml
podaac/: generate_vds_batch.py  generate_vds_clean.py  generate_vds_s3.py  generate_vds_s3_optimized.py  s3_to_https.py
terraform/: data.tf  list_lambda.py  list_lambda.tf  locals.tf  main.tf  sync_lambda.py  sync_lambda.tf  variables.tf
terraform/scripts/: ecs.sh
terraform/tfvars/: ops.backend  ops.tfvars  sit.backend  sit.tfvars  uat.backend  uat.tfvars
