[tool.poetry]
name = "virtualizarr-gen"
version = "0.3.0a5"
description = "A project using zarr, xarray, dask, virtualizarr, kerchunk, etc."
authors = ["podaac-tva <podaac-tva@jpl.nasa.gov>"]

packages = [
    { include = "podaac" },
]

[tool.poetry.dependencies]
python = "^3.12"

zarr = "2.18.4"
fastparquet = "2024.5.0"
xarray = "2026.2.0"
fsspec = "2026.2.0"
dask = "2026.1.2"
h5netcdf = "1.8.1"
virtualizarr = "1.3.2"
numcodecs = "0.15.1"
kerchunk = "0.2.7"
boto3 = "*"
earthaccess = "0.16.0"
distributed = "2026.1.2"

papermill = "*"
ipykernel = "*"
panda = "^0.3.1"

[tool.poetry.scripts]
generate-vds-s3 = "podaac.generate_vds_s3:cli"
translate-s3-https = "podaac.s3_to_https:cli"

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "^7.0.0"
pylint = "^4.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
